# nsfw_classifier_test

./: .gitignore  Makefile  README.md  create_dataframe.py  predict_onnx.py  predict_onnx_batch.py  prediction_results.json  pyproject.toml  requirements.txt  train.py
app/: main.py
app/models/: dto.py
app/services/: predictor.py
config/: train_config.yaml
data/: dataset.py  transforms.py
dataset/: label_mapping.json  trainset_meta_info.csv
inference/: batch_predictor.py  predictor.py
models/: convert.py  model.py
tests/locust/: locustfile.py  run_load_test.py
tools/: convert_to_onnx.py
utils/: device.py
