[tool.poetry]
name = "nsfw-classifier"
version = "0.1.0"
description = ""
authors = ["jy-choi <jy.choi@toss.im>"]
readme = "README.md"
packages = [{include = "nsfw_classifier"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.6.0"
torchvision = "^0.21.0"
pandas = "^2.2.3"
pyyaml = "^6.0.2"
pillow = "^11.1.0"
omegaconf = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
